--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:create": "sequelize-cli db:create"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -14,13 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.7.0",
+    "mysql2": "^3.14.1",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.7.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
@@ -28,7 +33,8 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.3"
   },
   "keywords": [
     "chat",
